--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: AlzTrial
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Alzheimer's Disease Study Modular Statistical Analysis 
 Version: 0.1.0
 Authors@R: c(
     person(
-      "Jane", "Doe",
-      email = "jane@example.com",
+      "Matias", "Lee",
+      email = "mlee346@jh.edu",
       role = c("aut", "cre")
     )
   )
-Description: More about what it does (maybe more than one line).
+Description: The AlzTrial package provides a straightforward tool to plan the sample size and budget for a two-endpoint clinical trial, modeled after a hypothetical Alzheimer’s disease study. Given specific effect sizes, standard deviations, and costs, the plan_alz_trial() function calculates the required number of participants and the total estimated cost, adhering to pre-set statistical power and error rates.
     Continuation lines should be indented.
 License: MIT + file LICENSE
 Encoding: UTF-8
